outputs/csi500-test/treevoo/2025-07-28_01-48-42/problem_iter38_response1.txt_stdout.txt
Traceback (most recent call last):
  File "/home/renjunji_2023/reevo/problems/csi500/eval.py", line 9, in <module>
    import gpt
  File "/home/renjunji_2023/reevo/problems/csi500/gpt.py", line 31
    true_range = df[['high' - 'close'].shift(1), ('low' - 'close').shift(1), high_low_diff]].max(axis=1)
                                                                                           ^
SyntaxError: unmatched ']'
